--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
 
     <title>OzzyChain - Dashboard</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/favicon.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/ozzy.jpg') }}">
 
     <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
     <link href="{{url_for('static',filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-      <a class="navbar-brand mr-1" href="index">OzzyChain</a>
+      <a class="navbar-brand mr-1" href="dashboard">OzzyChain</a>
 
       <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
@@ -63,6 +63,11 @@
           <a class="nav-link" href="buy">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Buy</span></a>
+        </li>
+        {% if page=='sell' %}<li class="nav-item active">{% else %}<li class="nav-item">{% endif %}
+          <a class="nav-link" href="sell">
+            <i class="fas fa-fw fa-chart-area"></i>
+            <span>Sell</span></a>
         </li>
         {% if page=='transaction' %}<li class="nav-item active">{% else %}<li class="nav-item">{% endif %}
           <a class="nav-link" href="transaction">
