--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,13 +1,10 @@
 {% extends 'layout.html' %}
-
-
 {% block body %}
+<script
+src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+</script>
 <h1>Welcome back, {{session.get('name')}}</h1>
 {% include 'includes/_messages.html' %}
-var xValue = {{ timestamps }}
-var yValue = {{ ozzy_price }}
-document.write(xValue)
-
 <div class="card mb-3">
   <div class="card-header">
     <i class="fas fa-chart-area"></i>
@@ -16,26 +13,63 @@ document.write(xValue)
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
   <div class="card-body">
     <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
-    <script xValues=xValue two="2">
-      new Chart("myChart", {
-  type: "line",
-  data: {
-    labels: document.currentScript.getAttribute('xValues'),
-    datasets: [{
-      fill: false,
-      lineTension: 0,
-      backgroundColor: "rgba(0,0,255,1.0)",
-      borderColor: "rgba(0,0,255,0.1)",
-      data: [6, 8, 3, 6, 20]
-    }]
-  },
-  options: {
-    legend: {display: false},
-    scales: {
-      yAxes: [{ticks: {min: 6, max:16}}],
-    }
-  }
-});
+    <script>
+      var yAxis = {{ price[-10:] }}
+      window.alert(yAxis);
+      var myLineChart = new Chart("myChart", {
+        type: "line",
+        data: {
+          labels: ["January", "February", "March", "April", "May", "June", "July"],
+          datasets: [
+            {
+              label: "Price ($USD)",
+              lineTension: 0.3,
+              backgroundColor: "rgba(2,117,216,0.2)",
+              borderColor: "rgba(2,117,216,1)",
+              pointRadius: 5,
+              pointBackgroundColor: "rgba(2,117,216,1)",
+              pointBorderColor: "rgba(255,255,255,0.8)",
+              pointHoverRadius: 5,
+              pointHoverBackgroundColor: "rgba(2,117,216,1)",
+              pointHitRadius: 50,
+              pointBorderWidth: 2,
+              data: yAxis
+            }
+          ]
+        },
+        options: {
+          scales: {
+            xAxes: [
+              {
+                time: {
+                  unit: "date"
+                },
+                gridLines: {
+                  display: false
+                },
+                ticks: {
+                  maxTicksLimit: 7
+                }
+              }
+            ],
+            yAxes: [
+              {
+                ticks: {
+                  min: 0,
+                  max: 10,
+                  maxTicksLimit: 5
+                },
+                gridLines: {
+                  color: "rgba(0, 0, 0, .125)"
+                }
+              }
+            ]
+          },
+          legend: {
+            display: false
+          }
+        }
+      });
     </script>
   </div>
   <div class="card-footer small text-muted">Updated today at {{ timenow }}</div>
