--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,11 +15,13 @@ src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
     <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
     <script>
       var yAxis = {{ price[-10:] }}
+      var xAxis = {{ timestamps[-10:]|tojson }}
       window.alert(yAxis);
+      window.alert(xAxis)
       var myLineChart = new Chart("myChart", {
         type: "line",
         data: {
-          labels: ["January", "February", "March", "April", "May", "June", "July"],
+          labels: xAxis,
           datasets: [
             {
               label: "Price ($USD)",
