--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,10 +14,9 @@ src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
   <div class="card-body">
     <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
     <script>
+      var yMax = {{ yMax }}
       var yAxis = {{ price[-10:] }}
       var xAxis = {{ timestamps[-10:]|tojson }}
-      window.alert(yAxis);
-      window.alert(xAxis)
       var myLineChart = new Chart("myChart", {
         type: "line",
         data: {
@@ -58,7 +57,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
               {
                 ticks: {
                   min: 0,
-                  max: 10,
+                  max: yMax,
                   maxTicksLimit: 5
                 },
                 gridLines: {
